updated spacing on footer and changed footer logo to ensure streching wasnt obvious

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -10,7 +10,7 @@
 .footer-info_container {
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items:flex-start;
     width: 90%;
     height: 90%;
@@ -18,24 +18,24 @@
 }
 
 .footer-info_container > img {
-    height: 45%;
-    width: 25%;
-    margin: 0;
+    height: 139px;
+    width: 145px;
+
 }
 
 .footer-info {
     display: flex;
     flex-direction: column;
     justify-content:  center;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .footer-info a {
     text-decoration: none;
     color: white;
     font-family: sans-serif;
-    font-size: 14.5px;
+    font-size: 15px;
 }
 
 .footer-info > h3 {
